dashboard: fix overflow when hovering over buttons in the nav

--- a/gitlab.user.styl
+++ b/gitlab.user.styl
@@ -886,6 +886,8 @@
   .page-title-holder {
     border: none;
     .page-title { margin: 0; }
+    // Found on: .../dashboard/milestones
+    .project-item-select-holder { overflow: unset; }
   }
 
   // * Dashboard :: Project navigation.
